src/grammar/smalltalk/SmalltalkParser.js
// @ts-nocheck
// Generated from Smalltalk.g4 by ANTLR 4.7.2
// jshint ignore: start
var antlr4 = require('antlr4/index');
var SmalltalkListener = require('./SmalltalkListener').SmalltalkListener;
var grammarFileName = "Smalltalk.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, null, null, null, "'['", "']'", "')'", "'('", 
                     "'|'", "'.'", "';'", null, "'<'", "'>'", "'-'", null, 
                     null, "'^'", "':'", "':='", "'#'", "'$'", "'e'", "'16r'", 
                     "'#('", "'#{'", "'}'", "'{'" ];

var symbolicNames = [ null, "SEPARATOR", "STRING", "COMMENT", "BLOCK_START", 
                      "BLOCK_END", "CLOSE_PAREN", "OPEN_PAREN", "PIPE", 
                      "PERIOD", "SEMI_COLON", "BINARY_SELECTOR", "LT", "GT", 
                      "MINUS", "RESERVED_WORD", "IDENTIFIER", "CARROT", 
                      "COLON", "ASSIGNMENT", "HASH", "DOLLAR", "EXP", "HEX", 
                      "LITARR_START", "DYNDICT_START", "DYNARR_END", "DYNARR_START", 
                      "DIGIT", "HEXDIGIT", "KEYWORD", "BLOCK_PARAM", "CHARACTER_CONSTANT" ];

var ruleNames =  [ "script", "sequence", "ws", "temps", "statements", "answer", 
                   "expression", "expressions", "expressionList", "cascade", 
                   "message", "assignment", "variable", "binarySend", "unarySend", 
                   "keywordSend", "keywordMessage", "keywordPair", "operand", 
                   "subexpression", "literal", "runtimeLiteral", "block", 
                   "blockParamList", "dynamicDictionary", "dynamicArray", 
                   "parsetimeLiteral", "number", "numberExp", "charConstant", 
                   "hex", "stInteger", "stFloat", "pseudoVariable", "string", 
                   "symbol", "primitive", "bareSymbol", "literalArray", 
                   "literalArrayRest", "bareLiteralArray", "unaryTail", 
                   "unaryMessage", "unarySelector", "keywords", "reference", 
                   "binaryTail", "binaryMessage" ];

function SmalltalkParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

SmalltalkParser.prototype = Object.create(antlr4.Parser.prototype);
SmalltalkParser.prototype.constructor = SmalltalkParser;

Object.defineProperty(SmalltalkParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

SmalltalkParser.EOF = antlr4.Token.EOF;
SmalltalkParser.SEPARATOR = 1;
SmalltalkParser.STRING = 2;
SmalltalkParser.COMMENT = 3;
SmalltalkParser.BLOCK_START = 4;
SmalltalkParser.BLOCK_END = 5;
SmalltalkParser.CLOSE_PAREN = 6;
SmalltalkParser.OPEN_PAREN = 7;
SmalltalkParser.PIPE = 8;
SmalltalkParser.PERIOD = 9;
SmalltalkParser.SEMI_COLON = 10;
SmalltalkParser.BINARY_SELECTOR = 11;
SmalltalkParser.LT = 12;
SmalltalkParser.GT = 13;
SmalltalkParser.MINUS = 14;
SmalltalkParser.RESERVED_WORD = 15;
SmalltalkParser.IDENTIFIER = 16;
SmalltalkParser.CARROT = 17;
SmalltalkParser.COLON = 18;
SmalltalkParser.ASSIGNMENT = 19;
SmalltalkParser.HASH = 20;
SmalltalkParser.DOLLAR = 21;
SmalltalkParser.EXP = 22;
SmalltalkParser.HEX = 23;
SmalltalkParser.LITARR_START = 24;
SmalltalkParser.DYNDICT_START = 25;
SmalltalkParser.DYNARR_END = 26;
SmalltalkParser.DYNARR_START = 27;
SmalltalkParser.DIGIT = 28;
SmalltalkParser.HEXDIGIT = 29;
SmalltalkParser.KEYWORD = 30;
SmalltalkParser.BLOCK_PARAM = 31;
SmalltalkParser.CHARACTER_CONSTANT = 32;

SmalltalkParser.RULE_script = 0;
SmalltalkParser.RULE_sequence = 1;
SmalltalkParser.RULE_ws = 2;
SmalltalkParser.RULE_temps = 3;
SmalltalkParser.RULE_statements = 4;
SmalltalkParser.RULE_answer = 5;
SmalltalkParser.RULE_expression = 6;
SmalltalkParser.RULE_expressions = 7;
SmalltalkParser.RULE_expressionList = 8;
SmalltalkParser.RULE_cascade = 9;
SmalltalkParser.RULE_message = 10;
SmalltalkParser.RULE_assignment = 11;
SmalltalkParser.RULE_variable = 12;
SmalltalkParser.RULE_binarySend = 13;
SmalltalkParser.RULE_unarySend = 14;
SmalltalkParser.RULE_keywordSend = 15;
SmalltalkParser.RULE_keywordMessage = 16;
SmalltalkParser.RULE_keywordPair = 17;
SmalltalkParser.RULE_operand = 18;
SmalltalkParser.RULE_subexpression = 19;
SmalltalkParser.RULE_literal = 20;
SmalltalkParser.RULE_runtimeLiteral = 21;
SmalltalkParser.RULE_block = 22;
SmalltalkParser.RULE_blockParamList = 23;
SmalltalkParser.RULE_dynamicDictionary = 24;
SmalltalkParser.RULE_dynamicArray = 25;
SmalltalkParser.RULE_parsetimeLiteral = 26;
SmalltalkParser.RULE_number = 27;
SmalltalkParser.RULE_numberExp = 28;
SmalltalkParser.RULE_charConstant = 29;
SmalltalkParser.RULE_hex = 30;
SmalltalkParser.RULE_stInteger = 31;
SmalltalkParser.RULE_stFloat = 32;
SmalltalkParser.RULE_pseudoVariable = 33;
SmalltalkParser.RULE_string = 34;
SmalltalkParser.RULE_symbol = 35;
SmalltalkParser.RULE_primitive = 36;
SmalltalkParser.RULE_bareSymbol = 37;
SmalltalkParser.RULE_literalArray = 38;
SmalltalkParser.RULE_literalArrayRest = 39;
SmalltalkParser.RULE_bareLiteralArray = 40;
SmalltalkParser.RULE_unaryTail = 41;
SmalltalkParser.RULE_unaryMessage = 42;
SmalltalkParser.RULE_unarySelector = 43;
SmalltalkParser.RULE_keywords = 44;
SmalltalkParser.RULE_reference = 45;
SmalltalkParser.RULE_binaryTail = 46;
SmalltalkParser.RULE_binaryMessage = 47;


function ScriptContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SmalltalkParser.RULE_script;
    return this;
}

ScriptContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ScriptContext.prototype.constructor = ScriptContext;

ScriptContext.prototype.sequence = function() {
    return this.getTypedRuleContext(SequenceContext,0);
};

ScriptContext.prototype.ws = function() {
    return this.getTypedRuleContext(WsContext,0);
};

ScriptContext.prototype.EOF = function() {
    return this.getToken(SmalltalkParser.EOF, 0);
};

ScriptContext.prototype.enterRule = function(listener) {
    if(listener instanceof SmalltalkListener ) {
        listener.enterScript(this);
	}
};

ScriptContext.prototype.exitRule = function(listener) {
    if(listener instanceof SmalltalkListener ) {
        listener.exitScript(this);
	}
};




SmalltalkParser.ScriptContext = ScriptContext;

SmalltalkParser.prototype.script = function() {

    var localctx = new ScriptContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, SmalltalkParser.RULE_script);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 96;
        this.sequence();
        this.state = 97;
        this.ws();
        this.state = 98;
        this.match(SmalltalkParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function SequenceContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SmalltalkParser.RULE_sequence;
    return this;
}

SequenceContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SequenceContext.prototype.constructor = SequenceContext;

SequenceContext.prototype.ws = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(WsContext);
    } else {
        return this.getTypedRuleContext(WsContext,i);
    }
};

SequenceContext.prototype.temps = function() {
    return this.getTypedRuleContext(TempsContext,0);
};

SequenceContext.prototype.statements = function() {
    return this.getTypedRuleContext(StatementsContext,0);
};

SequenceContext.prototype.enterRule = function(listener) {
    if(listener instanceof SmalltalkListener ) {
        listener.enterSequence(this);
	}
};

SequenceContext.prototype.exitRule = function(listener) {
    if(listener instanceof SmalltalkListener ) {
        listener.exitSequence(this);
	}
};




SmalltalkParser.SequenceContext = SequenceContext;

SmalltalkParser.prototype.sequence = function() {

    var localctx = new SequenceContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, SmalltalkParser.RULE_sequence);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 101;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,0,this._ctx);
        if(la_===1) {
            this.state = 100;
            this.temps();

        }
        this.state = 103;
        this.ws();
        this.state = 105;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(((((_la - 2)) & ~0x1f) == 0 && ((1 << (_la - 2)) & ((1 << (SmalltalkParser.STRING - 2)) | (1 << (SmalltalkParser.BLOCK_START - 2)) | (1 << (SmalltalkParser.OPEN_PAREN - 2)) | (1 << (SmalltalkParser.LT - 2)) | (1 << (SmalltalkParser.MINUS - 2)) | (1 << (SmalltalkParser.RESERVED_WORD - 2)) | (1 << (SmalltalkParser.IDENTIFIER - 2)) | (1 << (SmalltalkParser.CARROT - 2)) | (1 << (SmalltalkParser.HASH - 2)) | (1 << (SmalltalkParser.HEX - 2)) | (1 << (SmalltalkParser.LITARR_START - 2)) | (1 << (SmalltalkParser.DYNDICT_START - 2)) | (1 << (SmalltalkParser.DYNARR_START - 2)) | (1 << (SmalltalkParser.DIGIT - 2)) | (1 << (SmalltalkParser.CHARACTER_CONSTANT - 2)))) !== 0)) {
            this.state = 104;
            this.statements();
        }

        this.state = 107;
        this.ws();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function WsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SmalltalkParser.RULE_ws;
    return this;
}

WsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
WsContext.prototype.constructor = WsContext;

WsContext.prototype.SEPARATOR = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(SmalltalkParser.SEPARATOR);
    } else {
        return this.getToken(SmalltalkParser.SEPARATOR, i);
    }
};


WsContext.prototype.COMMENT = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(SmalltalkParser.COMMENT);
    } else {
        return this.getToken(SmalltalkParser.COMMENT, i);
    }
};


WsContext.prototype.enterRule = function(listener) {
    if(listener instanceof SmalltalkListener ) {
        listener.enterWs(this);
	}
};

WsContext.prototype.exitRule = function(listener) {
    if(listener instanceof SmalltalkListener ) {
        listener.exitWs(this);
	}
};




SmalltalkParser.WsContext = WsContext;

SmalltalkParser.prototype.ws = function() {

    var localctx = new WsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, SmalltalkParser.RULE_ws);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 112;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,2,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 109;
                _la = this._input.LA(1);
                if(!(_la===SmalltalkParser.SEPARATOR || _la===SmalltalkParser.COMMENT)) {
                this._errHandler.recoverInline(this);
                }
                else {
                	this._errHandler.reportMatch(this);
                    this.consume();
                } 
            }
            this.state = 114;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,2,this._ctx);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function TempsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SmalltalkParser.RULE_temps;
    return this;
}

TempsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
TempsContext.prototype.constructor = TempsContext;

TempsContext.prototype.ws = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(WsContext);
    } else {
        return this.getTypedRuleContext(WsContext,i);
    }
};

TempsContext.prototype.PIPE = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(SmalltalkParser.PIPE);
    } else {
        return this.getToken(SmalltalkParser.PIPE, i);
    }
};


TempsContext.prototype.IDENTIFIER = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(SmalltalkParser.IDENTIFIER);
    } else {
        return this.getToken(SmalltalkParser.IDENTIFIER, i);
    }
};


TempsContext.prototype.enterRule = function(listener) {
    if(listener instanceof SmalltalkListener ) {
        listener.enterTemps(this);
	}
};

TempsContext.prototype.exitRule = function(listener) {
    if(listener instanceof SmalltalkListener ) {
        listener.exitTemps(this);
	}
};




SmalltalkParser.TempsContext = TempsContext;

SmalltalkParser.prototype.temps = function() {

    var localctx = new TempsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, SmalltalkParser.RULE_temps);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 115;
        this.ws();
        this.state = 116;
        this.match(SmalltalkParser.PIPE);
        this.state = 120; 
        this._errHandler.sync(this);
        var _alt = 1;
        do {
        	switch (_alt) {
        	case 1:
        		this.state = 117;
        		this.ws();
        		this.state = 118;
        		this.match(SmalltalkParser.IDENTIFIER);
        		break;
        	default:
        		throw new antlr4.error.NoViableAltException(this);
        	}
        	this.state = 122; 
        	this._errHandler.sync(this);
        	_alt = this._interp.adaptivePredict(this._input,3, this._ctx);
        } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
        this.state = 124;
        this.ws();
        this.state = 125;
        this.match(SmalltalkParser.PIPE);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function StatementsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SmalltalkParser.RULE_statements;
    return this;
}

StatementsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatementsContext.prototype.constructor = StatementsContext;


 
StatementsContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function StatementAnswerContext(parser, ctx) {
	StatementsContext.call(this, parser);
    StatementsContext.prototype.copyFrom.call(this, ctx);
    return this;
}

StatementAnswerContext.prototype = Object.create(StatementsContext.prototype);
StatementAnswerContext.prototype.constructor = StatementAnswerContext;

SmalltalkParser.StatementAnswerContext = StatementAnswerContext;

StatementAnswerContext.prototype.answer = function() {
    return this.getTypedRuleContext(AnswerContext,0);
};

StatementAnswerContext.prototype.ws = function() {
    return this.getTypedRuleContext(WsContext,0);
};
StatementAnswerContext.prototype.enterRule = function(listener) {
    if(listener instanceof SmalltalkListener ) {
        listener.enterStatementAnswer(this);
	}
};

StatementAnswerContext.prototype.exitRule = function(listener) {
    if(listener instanceof SmalltalkListener ) {
        listener.exitStatementAnswer(this);
	}
};


function StatementExpressionsContext(parser, ctx) {
	StatementsContext.call(this, parser);
    StatementsContext.prototype.copyFrom.call(this, ctx);
    return this;
}

StatementExpressionsContext.prototype = Object.create(StatementsContext.prototype);
StatementExpressionsContext.prototype.constructor = StatementExpressionsContext;

SmalltalkParser.StatementExpressionsContext = StatementExpressionsContext;

StatementExpressionsContext.prototype.expressions = function() {
    return this.getTypedRuleContext(ExpressionsContext,0);
};

StatementExpressionsContext.prototype.ws = function() {
    return this.getTypedRuleContext(WsContext,0);
};

StatementExpressionsContext.prototype.PERIOD = function() {
    return this.getToken(SmalltalkParser.PERIOD, 0);
};
StatementExpressionsContext.prototype.enterRule = function(listener) {
    if(listener instanceof SmalltalkListener ) {
        listener.enterStatementExpressions(this);
	}
};

StatementExpressionsContext.prototype.exitRule = function(listener) {
    if(listener instanceof SmalltalkListener ) {
        listener.exitStatementExpressions(this);
	}
};


function StatementExpressionsAnswerContext(parser, ctx) {
	StatementsContext.call(this, parser);
    StatementsContext.prototype.copyFrom.call(this, ctx);
    return this;
}

StatementExpressionsAnswerContext.prototype = Object.create(StatementsContext.prototype);
StatementExpressionsAnswerContext.prototype.constructor = StatementExpressionsAnswerContext;

SmalltalkParser.StatementExpressionsAnswerContext = StatementExpressionsAnswerContext;

StatementExpressionsAnswerContext.prototype.expressions = function() {
    return this.getTypedRuleContext(ExpressionsContext,0);
};

StatementExpressionsAnswerContext.prototype.ws = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(WsContext);
    } else {
        return this.getTypedRuleContext(WsContext,i);
    }
};

StatementExpressionsAnswerContext.prototype.PERIOD = function() {
    return this.getToken(SmalltalkParser.PERIOD, 0);
};

StatementExpressionsAnswerContext.prototype.answer = function() {
    return this.getTypedRuleContext(AnswerContext,0);
};
StatementExpressionsAnswerContext.prototype.enterRule = function(listener) {
    if(listener instanceof SmalltalkListener ) {
        listener.enterStatementExpressionsAnswer(this);
	}
};

StatementExpressionsAnswerContext.prototype.exitRule = function(listener) {
    if(listener instanceof SmalltalkListener ) {
        listener.exitStatementExpressionsAnswer(this);
	}
};



SmalltalkParser.StatementsContext = StatementsContext;

SmalltalkParser.prototype.statements = function() {

    var localctx = new StatementsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, SmalltalkParser.RULE_statements);
    var _la = 0; // Token type
    try {
        this.state = 142;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,5,this._ctx);
        switch(la_) {
        case 1:
            localctx = new StatementAnswerContext(this, localctx);
            this.enterOuterAlt(localctx, 1);
            this.state = 127;
            this.answer();
            this.state = 128;
            this.ws();
            break;

        case 2:
            localctx = new StatementExpressionsAnswerContext(this, localctx);
            this.enterOuterAlt(localctx, 2);
            this.state = 130;
            this.expressions();
            this.state = 131;
            this.ws();
            this.state = 132;
            this.match(SmalltalkParser.PERIOD);
            this.state = 133;
            this.ws();
            this.state = 134;
            this.answer();
            break;

        case 3:
            localctx = new StatementExpressionsContext(this, localctx);
            this.enterOuterAlt(localctx, 3);
            this.state = 136;
            this.expressions();
            this.state = 138;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===SmalltalkParser.PERIOD) {
                this.state = 137;
                this.match(SmalltalkParser.PERIOD);
            }

            this.state = 140;
            this.ws();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function AnswerContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SmalltalkParser.RULE_answer;
    return this;
}

AnswerContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
AnswerContext.prototype.constructor = AnswerContext;

AnswerContext.prototype.CARROT = function() {
    return this.getToken(SmalltalkParser.CARROT, 0);
};

AnswerContext.prototype.ws = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(WsContext);
    } else {
        return this.getTypedRuleContext(WsContext,i);
    }
};

AnswerContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

AnswerContext.prototype.PERIOD = function() {
    return this.getToken(SmalltalkParser.PERIOD, 0);
};

AnswerContext.prototype.enterRule = function(listener) {
    if(listener instanceof SmalltalkListener ) {
        listener.enterAnswer(this);
	}
};

AnswerContext.prototype.exitRule = function(listener) {
    if(listener instanceof SmalltalkListener ) {
        listener.exitAnswer(this);
	}
};




SmalltalkParser.AnswerContext = AnswerContext;

SmalltalkParser.prototype.answer = function() {

    var localctx = new AnswerContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, SmalltalkParser.RULE_answer);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 144;
        this.match(SmalltalkParser.CARROT);
        this.state = 145;
        this.ws();
        this.state = 146;
        this.expression();
        this.state = 147;
        this.ws();
        this.state = 149;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===SmalltalkParser.PERIOD) {
            this.state = 148;
            this.match(SmalltalkParser.PERIOD);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ExpressionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SmalltalkParser.RULE_expression;
    return this;
}

ExpressionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ExpressionContext.prototype.constructor = ExpressionContext;

ExpressionContext.prototype.assignment = function() {
    return this.getTypedRuleContext(AssignmentContext,0);
};

ExpressionContext.prototype.cascade = function() {
    return this.getTypedRuleContext(CascadeContext,0);
};

ExpressionContext.prototype.keywordSend = function() {
    return this.getTypedRuleContext(KeywordSendContext,0);
};

ExpressionContext.prototype.binarySend = function() {
    return this.getTypedRuleContext(BinarySendContext,0);
};

ExpressionContext.prototype.primitive = function() {
    return this.getTypedRuleContext(PrimitiveContext,0);
};

ExpressionContext.prototype.enterRule = function(listener) {
    if(listener instanceof SmalltalkListener ) {
        listener.enterExpression(this);
	}
};

ExpressionContext.prototype.exitRule = function(listener) {
    if(listener instanceof SmalltalkListener ) {
        listener.exitExpression(this);
	}
};




SmalltalkParser.ExpressionContext = ExpressionContext;

SmalltalkParser.prototype.expression = function() {

    var localctx = new ExpressionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, SmalltalkParser.RULE_expression);
    try {
        this.state = 156;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,7,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 151;
            this.assignment();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 152;
            this.cascade();
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 153;
            this.keywordSend();
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 154;
            this.binarySend();
            break;

        case 5:
            this.enterOuterAlt(localctx, 5);
            this.state = 155;
            this.primitive();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ExpressionsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SmalltalkParser.RULE_expressions;
    return this;
}

ExpressionsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ExpressionsContext.prototype.constructor = ExpressionsContext;

ExpressionsContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

ExpressionsContext.prototype.expressionList = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExpressionListContext);
    } else {
        return this.getTypedRuleContext(ExpressionListContext,i);
    }
};

ExpressionsContext.prototype.enterRule = function(listener) {
    if(listener instanceof SmalltalkListener ) {
        listener.enterExpressions(this);
	}
};

ExpressionsContext.prototype.exitRule = function(listener) {
    if(listener instanceof SmalltalkListener ) {
        listener.exitExpressions(this);
	}
};




SmalltalkParser.ExpressionsContext = ExpressionsContext;

SmalltalkParser.prototype.expressions = function() {

    var localctx = new ExpressionsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, SmalltalkParser.RULE_expressions);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 158;
        this.expression();
        this.state = 162;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,8,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 159;
                this.expressionList(); 
            }
            this.state = 164;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,8,this._ctx);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

